<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E8F5E9">

    <!-- App Title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Priroda++"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#388E3C"
        android:layout_marginBottom="24dp" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:background="@drawable/input_background"
        android:textColor="#388E3C"
        android:textColorHint="#81C784"
        android:layout_marginBottom="16dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@drawable/input_background"
        android:textColor="#388E3C"
        android:textColorHint="#81C784"
        android:layout_marginBottom="24dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_with_shadow"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="14dp"
        android:layout_marginBottom="16dp" />


    <!-- Register Text -->
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="#388E3C"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>
